test/Fail/ConvErrProj.agda
module ConvErrProj where

open import Agda.Builtin.Equality

record Field : Setâ‚ where
  field
    carrier : Set
    _+_ _*_ : carrier â†’ carrier â†’ carrier

module _ (ğ”½ : Field) where
  open Field ğ”½
  test : âˆ€ x y â†’ x + y â‰¡ x * y
  test x y = refl

-- error should say x + y != x * y
-- not Field._+_ != Field._*_
